--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -126,7 +126,7 @@
             </div>
         </div>
     </div>
-    <div class="modal-footer text-left" *ngIf="creator || reportID == '0'">
+    <div class="modal-footer text-left" *ngIf="creator || reportID == '0';else note">
         <button matTooltip="שמירה" class="btn btn-outline-dark ml-4" color="primary" (click)="onSubmit()" type="submit"
             mat-raised-button>
             <span class="material-icons">
@@ -140,4 +140,5 @@
             </span>
         </button>
     </div>
+    <ng-template #note>להוספת תגובה לדווח תחת העמודה "הוסף תגובה לדווח"</ng-template>
 </form>
