--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -127,7 +127,7 @@
                     </mat-expansion-panel>
                 </mat-accordion>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="nursesUserPermission">
                 <mat-accordion>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
