--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -134,7 +134,7 @@
         </ol>
 
         <div formArrayName="Tables" *ngIf="_tableForm == '1'">
-          <div class="d-block">
+          <div class="d-amin">
             <h3 style="text-align: right;"><strong>חלק טבלאות</strong></h3>
           </div>
           <div *ngFor="let table of _tableArr; let tableIndex = index" [formGroupName]="tableIndex"
