--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -137,7 +137,10 @@
                         <ul>
 
                             <li class="nav-item">
-                                <a class="nav-link" routerLink="nursereportsystem">כניסה</a>
+                                <a class="nav-link" routerLink="nursereportsystem">מערכת דו"חות</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" routerLink="nursesmanagedashboard">דאשבורד מחלקות</a>
                             </li>
                         </ul>
                     </mat-expansion-panel>
