--- a/src/app/updatesingleform/updatesingleform.component.html
+++ b/src/app/updatesingleform/updatesingleform.component.html
@@ -73,7 +73,7 @@
                   </div>
                   <div class="col-3">
                     <mat-form-field class="full-width">
-                      <input formControlName="priority" matInput placeholder="מספר שאלה" value="{{i}}" [required]="true">
+                      <input formControlName="priority" matInput placeholder="מספר שאלה" [required]="true">
                     </mat-form-field>
                     <mat-slide-toggle class="example-margin" color="warn" formControlName="IsRequired">שדה חובה*
                     </mat-slide-toggle>
